DB and text embd notebooks

--- a/Jupyter/text_embedding_comp.ipynb
+++ b/Jupyter/text_embedding_comp.ipynb
@@ -6,8 +6,8 @@
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2024-09-16T10:37:12.560552Z",
-     "start_time": "2024-09-16T10:37:12.550554Z"
+     "end_time": "2024-09-16T11:56:04.726045Z",
+     "start_time": "2024-09-16T11:56:04.676801Z"
     }
    },
    "source": [
@@ -21,33 +21,24 @@
     "import seaborn as sns"
    ],
    "outputs": [],
-   "execution_count": 27
+   "execution_count": 3
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-09-16T10:37:17.330665Z",
-     "start_time": "2024-09-16T10:37:13.579266Z"
+     "end_time": "2024-09-16T17:13:25.901798Z",
+     "start_time": "2024-09-16T17:13:21.444197Z"
     }
    },
    "cell_type": "code",
    "source": [
-    "alephbert_model = AutoModel.from_pretrained(\"onlplab/alephbert-base\")\n",
-    "alephbert_tokenizer = AutoTokenizer.from_pretrained(\"onlplab/alephbert-base\")\n",
+    "model_name = \"onlplab/alephbert-base\"\n",
+    "alephbert_model = AutoModel.from_pretrained(model_name, add_pooling_layer=False)\n",
+    "alephbert_tokenizer = AutoTokenizer.from_pretrained(model_name, clean_up_tokenization_spaces=True)\n",
     "bgem3_model = BGEM3FlagModel('BAAI/bge-m3', use_fp16=True)"
    ],
    "id": "7a147f5d431c02ea",
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Some weights of BertModel were not initialized from the model checkpoint at onlplab/alephbert-base and are newly initialized: ['bert.pooler.dense.bias', 'bert.pooler.dense.weight']\n",
-      "You should probably TRAIN this model on a down-stream task to be able to use it for predictions and inference.\n",
-      "C:\\Users\\Admin\\PycharmProjects\\KaleidooProject\\.venv\\lib\\site-packages\\transformers\\tokenization_utils_base.py:1601: FutureWarning: `clean_up_tokenization_spaces` was not set. It will be set to `True` by default. This behavior will be depracted in transformers v4.45, and will be then set to `False` by default. For more details check this issue: https://github.com/huggingface/transformers/issues/31884\n",
-      "  warnings.warn(\n"
-     ]
-    },
     {
      "data": {
       "text/plain": [
@@ -56,7 +47,7 @@
       "application/vnd.jupyter.widget-view+json": {
        "version_major": 2,
        "version_minor": 0,
-       "model_id": "5401faa30b6a4e478dee464baf5e10c8"
+       "model_id": "658134a0677b4278af724de8157020de"
       }
      },
      "metadata": {},
@@ -73,13 +64,13 @@
      ]
     }
    ],
-   "execution_count": 28
+   "execution_count": 11
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-09-16T10:37:17.345666Z",
-     "start_time": "2024-09-16T10:37:17.331666Z"
+     "end_time": "2024-09-16T11:56:11.809378Z",
+     "start_time": "2024-09-16T11:56:11.803089Z"
     }
    },
    "cell_type": "code",
@@ -98,13 +89,13 @@
    ],
    "id": "b9ec43e8cb5c7723",
    "outputs": [],
-   "execution_count": 29
+   "execution_count": 5
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-09-16T10:37:22.783895Z",
-     "start_time": "2024-09-16T10:37:22.765896Z"
+     "end_time": "2024-09-16T11:56:12.534314Z",
+     "start_time": "2024-09-16T11:56:12.515314Z"
     }
    },
    "cell_type": "code",
@@ -126,13 +117,13 @@
    ],
    "id": "1003809a6c6290fb",
    "outputs": [],
-   "execution_count": 30
+   "execution_count": 6
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-09-16T10:37:25.553723Z",
-     "start_time": "2024-09-16T10:37:24.589896Z"
+     "end_time": "2024-09-16T11:56:14.394258Z",
+     "start_time": "2024-09-16T11:56:13.210421Z"
     }
    },
    "cell_type": "code",
@@ -164,13 +155,13 @@
    ],
    "id": "8612c5c67a35dd25",
    "outputs": [],
-   "execution_count": 31
+   "execution_count": 7
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-09-16T10:37:26.423312Z",
-     "start_time": "2024-09-16T10:37:26.393312Z"
+     "end_time": "2024-09-16T11:56:15.135926Z",
+     "start_time": "2024-09-16T11:56:15.104924Z"
     }
    },
    "cell_type": "code",
@@ -259,13 +250,13 @@
      ]
     }
    ],
-   "execution_count": 32
+   "execution_count": 8
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-09-16T10:37:28.094779Z",
-     "start_time": "2024-09-16T10:37:27.439774Z"
+     "end_time": "2024-09-16T11:56:17.545035Z",
+     "start_time": "2024-09-16T11:56:16.842270Z"
     }
    },
    "cell_type": "code",
@@ -301,7 +292,7 @@
      "output_type": "display_data"
     }
    ],
-   "execution_count": 33
+   "execution_count": 9
   },
   {
    "metadata": {
